formulaire inscription + connexion

--- a/bibliotheque-front/src/app/ajout-emprunt/ajout-emprunt.component.html
+++ b/bibliotheque-front/src/app/ajout-emprunt/ajout-emprunt.component.html
@@ -6,7 +6,7 @@
 
        <div class="row mb-3">
            <div>
-               <p class="row align-items-center mb-1">ID abonné</p>
+               <p class="row mb-1">ID abonné</p>
            </div>
            <div class="row">
                <input type="number" id="idEmprunteur" placeholder="" [(ngModel)]="formEmprunt.idEmprunteur"/>
@@ -15,7 +15,7 @@
 
        <div class="row mb-3">
            <div>
-               <p class="row align-items-center mb-1">ID exemplaire</p>
+               <p class="row mb-1">ID exemplaire</p>
            </div>
            <div class="row">
                <input type="number" id="idExemplaire" placeholder="" [(ngModel)]="formEmprunt.idExemplaire"/>
@@ -24,7 +24,7 @@
 
        <div class="row mb-3">
         <div>
-            <p class="row align-items-center mb-1">Date d'emprunt</p>
+            <p class="row mb-1">Date d'emprunt</p>
         </div>
         <div class="row">
             <input type="date" id="debut" placeholder="" [(ngModel)]="formEmprunt.debut"/>
@@ -34,8 +34,8 @@
 
        <div class="row mb-1">  
            <div class=" col-9 position-absolute bottom-0 end-0">
-               <button type="button" (click)="cancel_emprunt()" class="btn btn-danger btn-md me-2 mb-3" type="submit" value="Submit">Reset</button>
-               <button type="button" (click)="save_emprunt()" class="btn btn-success btn-md mb-3" type="submit" value="Submit">Submit</button>
+               <button type="submit" (click)="cancel_emprunt()" class="btn btn-danger btn-md me-2 mb-3" type="submit" value="Submit">Reset</button>
+               <button type="submit" (click)="save_emprunt()" class="btn btn-success btn-md mb-3" type="submit" value="Submit">Submit</button>
            </div>  
        </div> 
            
