--- a/bibliotheque-front/src/app/page-bibliothecaire/page-bibliothecaire.component.html
+++ b/bibliotheque-front/src/app/page-bibliothecaire/page-bibliothecaire.component.html
@@ -17,16 +17,16 @@
     
                 <div class="row mb-3">
                     <div>
-                        <p class="row align-items-center mb-1">ID abonné</p>
+                        <p class="row mb-1">ID abonné</p>
                     </div>
-                    <div class="row align-items-center">
+                    <div class="row ">
                         <input id="IdAbonneForm" placeholder="" />
                     </div>
                 </div>
 
                 <div class="row mb-3">
                     <div>
-                        <p class="row align-items-center mb-1">ID exemplaire</p>
+                        <p class="row mb-1">ID exemplaire</p>
                     </div>
                     <div class="row">
                         <input id="IdAbonneForm" placeholder="" />
@@ -35,7 +35,7 @@
 
                 <div class="row mb-3 ">
                     <div>
-                        <p class="row align-items-center mb-1">ID réservation</p>
+                        <p class="row mb-1">ID réservation</p>
                     </div>
                     <div class="row">
                         <input id="IdAbonneForm" placeholder="" />
@@ -108,46 +108,46 @@
 
     <div class="row mb-3">
         <div class="col-6">
-            <p class="row align-items-center mb-1">ID abonné</p>
-            <input class="row align-items-center" id="IdAbonneForm" placeholder="" />
+            <p class="row mb-1">ID abonné</p>
+            <input class="row col-12" id="IdAbonneForm" placeholder="" />
         </div>
         <div class="col-6">
-            <p class="row align-items-center mb-1">Edition</p>
-            <input class="row align-items-center" id="EditionForm" placeholder="" />
-        </div>
-        
-    </div>
-
-    <div class="row mb-3">
-        <div class="col-6">
-            <p class="row align-items-center mb-1">Auteur</p>
-            <input class="row align-items-center" id="AuteurForm" placeholder="" />
-        </div>
-        <div class="col-6">
-            <p class="row align-items-center mb-1">ISBN</p>
-            <input class="row align-items-center" id="ISBNForm" placeholder="" />
+            <p class="row mb-1">Edition</p>
+            <input class="row col-12"  id="EditionForm" placeholder="" />
         </div>
         
     </div>
 
     <div class="row mb-3">
         <div class="col-6">
-            <p class="row align-items-center mb-1">Genre</p>
-            <input class="row align-items-center" id="GenreForm" placeholder="" />
+            <p class="row mb-1">Auteur</p>
+            <input class="row col-12" id="AuteurForm" placeholder="" />
         </div>
         <div class="col-6">
-            <p class="row align-items-center mb-1">Date de parution</p>
-            <input class="row align-items-center" id="ParutionForm" placeholder="" />
+            <p class="row  mb-1">ISBN</p>
+            <input class="row col-12" id="ISBNForm" placeholder="" />
+        </div>
+        
+    </div>
+
+    <div class="row mb-3">
+        <div class="col-6">
+            <p class="row  mb-1">Genre</p>
+            <input class="row col-12" id="GenreForm" placeholder="" />
+        </div>
+        <div class="col-6">
+            <p class="row  mb-1">Date de parution</p>
+            <input class="row col-12" id="ParutionForm" placeholder="" />
         </div>
 
     </div>
 
     <div class="row mb-1">
         <div class="col-5">
-            <p class="row align-items-center mb-1">Classification</p>
-            <input class="row align-items-center" id="ClassificationForm" placeholder="" />
+            <p class="row mb-1">Classification</p>
+            <input class="row col-12" id="ClassificationForm" placeholder="" />
         </div>
-        <div class="col-5 position-absolute bottom-0 end-0">
+        <div class="col-4 position-absolute bottom-0 end-0">
             <button type="button" class="btn btn-danger btn-md me-2 mb-3" type="submit" value="Submit">Reset</button>
             <button type="button" class="btn btn-success btn-md mb-3" type="submit" value="Submit">Submit</button>
 
