--- a/bibliotheque-front/src/app/page-connexion/page-connexion.component.html
+++ b/bibliotheque-front/src/app/page-connexion/page-connexion.component.html
@@ -1,6 +1,15 @@
-<div class="container text-center">
+<div class="container text-center mt-3 mb-3">
     <div class="row">
-        <app-connexion class="col-6"></app-connexion>
-        <app-inscription class="col-6"></app-inscription>
+        <section class="align-self-center col-3">
+            <div>
+                <h1>Bienvenue sur le site de la Bibliothèque G4</h1>
+            </div>
+        </section>
+        <section class="align-self-center col-6">
+            <app-inscription></app-inscription>
+        </section>
+        <section class="col-3">
+            <app-connexion></app-connexion>
+        </section>
     </div>
 </div>
