--- a/bibliotheque-front/src/app/page-connexion/inscription/inscription.component.html
+++ b/bibliotheque-front/src/app/page-connexion/inscription/inscription.component.html
@@ -1,3 +1,84 @@
+<!-- Ancien style -->
+<!--
+<div class="container mt-3">
+  <div class="row">
+    <div class="container card h-100">
+      <fieldset class="card-body">
+      <h5 class="text-center">Formulaire d'inscription</h5>
+-->
+<div class="container card h-100">
+  <fieldset class="card-body">
+  <h5 class="text-center">Formulaire d'inscription</h5>
+
+     <hr>
+  
+
+         <div class="row mb-3">
+             <div class="col-6">
+                 <p class="row mb-1">Prenom</p>
+                 <input class="row col-12" type="text" id="firstName" name="firstName" [(ngModel)]="formCompte.prenom"/>
+             </div>
+             <div class="col-6">
+                <p class="row mb-1">Nom</p>
+                <input class="row col-12" type="text" id="lasttName" name="lasttName"  [(ngModel)]="formCompte.nom"/> 
+            </div>
+         </div>
+
+         <div class="row mb-3">
+          <div class="col-6">
+              <p class="row mb-1">Date de naissance</p>
+              <input class="row col-12" type="date" id="birthdayDate" name="naissance" [(ngModel)]="formCompte.naissance"/>
+          </div>
+          <div class="col-6">
+             <p class="row mb-1">Email</p>
+             <input class="row col-12" type="email" id="emailAddress" name="email" [(ngModel)]="formCompte.login"/>
+          </div>
+         </div>
+
+         <div class="row ">
+          <div class="row col-6">
+             <p class="row align-items-center mb-1">Type de compte</p>
+             <div class="form-check form-check-inline col-6">
+              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="bibliothecaire"
+                value="bibliothecaire"[(ngModel)]="formCompte.type"/>
+              <label class="form-check-label" for="bibliothecaire">Bibliothecaire</label>
+            </div>
+          </div>
+          <div class="row col-6">
+             <p class="row mb-1 ms-3">Mot de passe</p>
+             <input class="row ms-4 col-12" type="password" id="password" name="password"  [(ngModel)]="formCompte.password"/> 
+          </div>
+         </div>
+
+         <div class="row mb-3">
+          <div class="row col-6">
+          
+            <div class="form-check form-check-inline col-4">
+              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="lecteur"
+                value="inscrit" [(ngModel)]="formCompte.type"/>
+              <label class="form-check-label" for="lecteur">Lecteur</label>
+            </div>
+
+            <div class="form-check form-check-inline col-3">
+              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="admin"
+                value="admin" [(ngModel)]="formCompte.type"/>
+              <label class="form-check-label" for="admin">Admin</label>
+            </div>
+
+          </div>
+        </div>
+
+         <div class="">  
+             <div class="">
+                <button type="submit" (click)="create()" class="btn btn-success ">Création d'un compte</button>
+             </div>  
+         </div> 
+             
+     </fieldset>
+  </div>
+
+<!--Ancien Formulaire-->
+<!--
 <section class="gradient-custom">
     <div class="container py-5 h-100">
       <div class="row justify-content-center align-items-center h-100">
@@ -90,3 +171,4 @@
       </div>
     </div>
   </section>
+-->
