--- a/bibliotheque-front/src/app/home/home.component.html
+++ b/bibliotheque-front/src/app/home/home.component.html
@@ -1,3 +1,20 @@
-<div class="homeBody" >
-    <app-search-bar></app-search-bar>
+<div class="hero-accueil-image overflow-hidden px-5">
+    <div class="row align-items-center py-5 g-lg-5 hero-accueil-image">
+        <div class="col-lg-7 text-center text-lg-start">
+            <h1 class="display-4 fw-bold lh-1 mb-3">L'accès à la culture, en un clic.</h1>
+            <p class="col-lg-10 fs-4">La Bibliothèque Cantin est une bibliothèque faite par des nouveaux chez Sopra,
+                pour des nouveaux chez Sopra. Recherchez, réservez, et accélérez votre aquisition de savoir. Même si
+                vous être un chercheur en physique, ou un ornithologue spécialisé en canards.</p>
+        </div>
+        <div class="col-md-10 mx-auto col-lg-5">
+            <div class="p-4 p-md-5 border rounded-3 bg-light">
+                <div class="mb-1"><small class="text-muted ">Consultez notre catalogue, en un clic !</small></div>
+                <app-search-bar></app-search-bar>
+                <hr class="my-3">
+
+                <div class="mb-2"><small class="text-muted ">Ou insctrivez-vous dès maintenant pour proviter de nombreux
+                        avantages !</small></div>
+            </div>
+        </div>
+    </div>
 </div>
