--- a/bibliotheque-front/src/app/app.component.html
+++ b/bibliotheque-front/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column min-vh-100">
     <div><app-navbar></app-navbar></div>
     
-    <div class="container flex-fill mt-3 mb-3">
+    <div class="flex-fill">
         <router-outlet></router-outlet>
     </div>
 
