--- a/bibliotheque-front/src/app/page-connexion/inscription/inscription.component.html
+++ b/bibliotheque-front/src/app/page-connexion/inscription/inscription.component.html
@@ -1,174 +1,74 @@
-<!-- Ancien style -->
-<!--
-<div class="container mt-3">
-  <div class="row">
-    <div class="container card h-100">
-      <fieldset class="card-body">
-      <h5 class="text-center">Formulaire d'inscription</h5>
--->
-<div class="container card h-100">
-  <fieldset class="card-body">
-  <h5 class="text-center">Formulaire d'inscription</h5>
+<div class="p-4 p-md-4 border rounded-3 bg-light">
+    <fieldset class="">
+        <h5 class="text-center">Formulaire d'inscription</h5>
 
-     <hr>
-  
+        <hr>
 
-         <div class="row mb-3">
-             <div class="col-6">
-                 <p class="row mb-1">Prenom</p>
-                 <input class="row col-12" type="text" id="firstName" name="firstName" [(ngModel)]="formCompte.prenom"/>
-             </div>
-             <div class="col-6">
-                <p class="row mb-1">Nom</p>
-                <input class="row col-12" type="text" id="lasttName" name="lasttName"  [(ngModel)]="formCompte.nom"/> 
+        <div class="row mb-3">
+            <div class="col-6">
+                <label for="firstName" class="form-label">Prénom</label>
+                <input class="form-control" type="text" id="firstName" [(ngModel)]="formCompte.prenom" />
             </div>
-         </div>
-
-         <div class="row mb-3">
-          <div class="col-6">
-              <p class="row mb-1">Date de naissance</p>
-              <input class="row col-12" type="date" id="birthdayDate" name="naissance" [(ngModel)]="formCompte.naissance"/>
-          </div>
-          <div class="col-6">
-             <p class="row mb-1">Email</p>
-             <input class="row col-12" type="email" id="emailAddress" name="email" [(ngModel)]="formCompte.login"/>
-          </div>
-         </div>
-
-         <div class="row ">
-          <div class="row col-6">
-             <p class="row align-items-center mb-1">Type de compte</p>
-             <div class="form-check form-check-inline col-6">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="bibliothecaire"
-                value="bibliothecaire"[(ngModel)]="formCompte.type"/>
-              <label class="form-check-label" for="bibliothecaire">Bibliothecaire</label>
+            <div class="col-6">
+                <label for="lasttName" class="form-label">Nom</label>
+                <input class="form-control" type="text" id="lastName" [(ngModel)]="formCompte.nom" />
             </div>
-          </div>
-          <div class="row col-6">
-             <p class="row mb-1 ms-3">Mot de passe</p>
-             <input class="row ms-4 col-12" type="password" id="password" name="password"  [(ngModel)]="formCompte.password"/> 
-          </div>
-         </div>
-
-         <div class="row mb-3">
-          <div class="row col-6">
-          
-            <div class="form-check form-check-inline col-4">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="lecteur"
-                value="inscrit" [(ngModel)]="formCompte.type"/>
-              <label class="form-check-label" for="lecteur">Lecteur</label>
-            </div>
-
-            <div class="form-check form-check-inline col-3">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="admin"
-                value="admin" [(ngModel)]="formCompte.type"/>
-              <label class="form-check-label" for="admin">Admin</label>
-            </div>
-
-          </div>
         </div>
 
-         <div class="">  
-             <div class="">
-                <button type="submit" (click)="create()" class="btn btn-success ">Création d'un compte</button>
-             </div>  
-         </div> 
-             
-     </fieldset>
-  </div>
-
-<!--Ancien Formulaire-->
-<!--
-<section class="gradient-custom">
-    <div class="container py-5 h-100">
-      <div class="row justify-content-center align-items-center h-100">
-        <div class="col-12 col-lg-9 col-xl-7">
-          <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
-            <div class="card-body p-4 p-md-5">
-              <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Formulaire d'Inscription</h3>
-              <form>
-  
-                <div class="row">
-                  <div class="col-md-6 mb-4">
-  
-                    <div class="form-outline">
-                      <input type="text" id="firstName" class="form-control form-control-lg" name="firstName" [(ngModel)]="formCompte.prenom"/>
-                      <label class="form-label" for="firstName">Prénom</label>
-                    </div>
-  
-                  </div>
-                  <div class="col-md-6 mb-4">
-  
-                    <div class="form-outline">
-                      <input type="text" id="lastName" class="form-control form-control-lg" name="lastName" [(ngModel)]="formCompte.nom"/>
-                      <label class="form-label" for="lastName">Nom</label>
-                    </div>
-  
-                  </div>
-                </div>
-  
-                <div class="row">
-                  <div class="col-md-6 mb-4 d-flex align-items-center">
-  
-                    <div class="form-outline datepicker w-100">
-                      <input type="date" class="form-control form-control-lg" id="birthdayDate" name="naissance" [(ngModel)]="formCompte.naissance"/>
-                      <label for="birthdayDate" class="form-label">Date de Naissance</label>
-                    </div>
-  
-                  </div>
-                  <div class="col-md-6 mb-4">
-  
-                    <h6 class="mb-2 pb-1">Type de Compte</h6>
-  
-                    <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="bibliothecaire"
-                        value="bibliothecaire"[(ngModel)]="formCompte.type"/>
-                      <label class="form-check-label" for="bibliothecaire">Bibliothecaire</label>
-                    </div>
-  
-                    <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="lecteur"
-                        value="inscrit" [(ngModel)]="formCompte.type"/>
-                      <label class="form-check-label" for="lecteur">Lecteur</label>
-                    </div>
-  
-                    <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="admin"
-                        value="admin" [(ngModel)]="formCompte.type"/>
-                      <label class="form-check-label" for="admin">Admin</label>
-                    </div>
-  
-                  </div>
-                </div>
-  
-                <div class="row">
-                  <div class="col-md-6 mb-4 pb-2">
-  
-                    <div class="form-outline">
-                      <input type="email" id="emailAddress" class="form-control form-control-lg" name="email" [(ngModel)]="formCompte.login"/>
-                      <label class="form-label" for="emailAddress">Email</label>
-                    </div>
-  
-                  </div>
-                  <div class="col-md-6 mb-4 pb-2">
-  
-                    <div class="form-outline">
-                      <input type="password" id="password" class="form-control form-control-lg" name="password" [(ngModel)]="formCompte.password"/>
-                      <label class="form-label" for="password">Mot de Passe</label>
-                    </div>
-  
-                  </div>
-                </div>
-  
-                <div class="mt-4 pt-2">
-                  <input class="btn btn-primary btn-lg" type="submit" value="Submit" (click)="create()"/>
-                </div>
-  
-              </form>
+        <div class="row mb-3">
+            <div class="col-12">
+                <label for="birthdayDate" class="form-label">Date de naissance</label>
+                <input class="form-control" type="date" id="birthdayDate" [(ngModel)]="formCompte.naissance" />
             </div>
-          </div>
         </div>
-      </div>
-    </div>
-  </section>
--->
+
+        <div class="row mb-3">
+            <div class="col-12 justify-content-center">
+                <p class="mb-1">Type de compte :</p>
+                <!-- radioButton1 : Bibliothécaire -->
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="bibliothecaire" value="bibliothecaire"
+                        [(ngModel)]="formCompte.type" />
+                    <label class="form-check-label" for="bibliothecaire">Bibliothecaire</label>
+                </div>
+                <!-- radioButton2:  -->
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="lecteur" value="inscrit"
+                        [(ngModel)]="formCompte.type" />
+                    <label class="form-check-label" for="lecteur">Lecteur</label>
+                </div>
+                <!-- radioButton3 :  -->
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="admin" value="admin"
+                        [(ngModel)]="formCompte.type" />
+                    <label class="form-check-label" for="admin">Admin</label>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row mb-3">
+            <div class="col-6">
+                <label for="login" class="form-label">Nom d'utilisateur</label>
+                <input class="form-control" id="login" [(ngModel)]="formCompte.login" />
+            </div>
+
+            <div class="col-6">
+                <label for="password" class="form-label">Mot de passe</label>
+                <input class="form-control" type="password" id="password" [(ngModel)]="formCompte.password" />
+            </div>
+        </div>
+
+        <div class="row mb-3">
+            <div>
+                <button class="w-100 btn btn-lg btn-success" type="submit" (click)="create()">Création d'un
+                    compte</button>
+            </div>
+        </div>
+
+        <small class="text-muted">En cliquant sur ce bouton, vous acceptez les <a href="#"
+                class="link-warning">conditions
+                d'utilisations</a>.</small>
+    </fieldset>
+</div>
