--- a/bibliotheque-front/src/app/page-connexion/page-connexion.component.html
+++ b/bibliotheque-front/src/app/page-connexion/page-connexion.component.html
@@ -1,15 +1,12 @@
-<div class="container text-center mt-3 mb-3">
-    <div class="row">
-        <section class="align-self-center col-3">
-            <div>
-                <h1>Bienvenue sur le site de la Bibliothèque G4</h1>
+<div class="hero-accueil-image overflow-hidden px-5">
+    <div class="px-4 pt-5 my-5 text-center">
+        <h1 class="display-4 fw-bold">Rejoignez la plus petite des bibliothèques numériques au monde.</h1>
+        <div class="col-lg-8 mx-auto">
+            <p class="lead mb-4">Plus de 2 livres sont à portée de clic. Rejoignez-nous maintenant !</p>
+            <div class="text-start d-grid gap-5 d-md-flex justify-content-sm-center mb-5">
+                <div class="w-50"><app-inscription></app-inscription></div>
+                <div class="w-50"><app-connexion></app-connexion></div>
             </div>
-        </section>
-        <section class="align-self-center col-6">
-            <app-inscription></app-inscription>
-        </section>
-        <section class="col-3">
-            <app-connexion></app-connexion>
-        </section>
+        </div>
     </div>
 </div>
