--- a/bibliotheque-front/src/app/navbar/navbar.component.html
+++ b/bibliotheque-front/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
                 <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
             </form>-->
             <div class="col-12 col-lg-auto me-3" style="width: 25vw;" role="search">
-                <app-search-bar></app-search-bar>
+                <app-search-bar [maListeDeClasses]="['form-control', 'form-control-dark', 'text-bg-dark']"></app-search-bar>
             </div>
 
 
