--- a/bibliotheque-front/src/app/page-bibliothecaire/ajoutlivre/ajoutlivre.component.html
+++ b/bibliotheque-front/src/app/page-bibliothecaire/ajoutlivre/ajoutlivre.component.html
@@ -2,7 +2,7 @@
 
 <div class="card mt-3" >
 
-    <div class="card-header bg-primary text-white display-6">Ajout d'un livre</div>
+    <div class="card-header bg-dark text-white display-6">Ajout d'un livre</div>
     
     <div class="card-body">
         <div class="form-group">
