--- a/bibliotheque-front/src/app/page-bibliothecaire/bibliothecaire-emprunts/bibliothecaire-emprunts.component.html
+++ b/bibliotheque-front/src/app/page-bibliothecaire/bibliothecaire-emprunts/bibliothecaire-emprunts.component.html
@@ -1,7 +1,7 @@
 Recherche : <input type="text" [(ngModel)]="recherche" /><br />
 
 <div class="card mt-3">
-    <div class="card-header bg-secondary text-white display-6">Details des emprunts</div>
+    <div class="card-header bg-dark text-white display-6">Details des emprunts</div>
     <div class="card-body">
         <table class="table table-striped">
             <thead>
