--- a/bibliotheque-front/src/app/page-lecteur/page-lecteur.component.html
+++ b/bibliotheque-front/src/app/page-lecteur/page-lecteur.component.html
@@ -1,35 +1,38 @@
-<div class="mt-3 mb-3">
-    <button type="button" class="btn btn-dark btn-md" type="submit" value="">Rechercher un livre</button>
-</div>
+<div class="container py-3">
+    <div class="mt-3 mb-3">
+        <button type="button" class="btn btn-dark btn-md" type="submit" value="">Rechercher un livre</button>
+    </div>
 
 
 
-<hr>
+    <hr>
 
-<div class="card mt-3">
-    <div class="card-header bg-primary text-white display-6">Mes emprunts</div>
-    <div class="card-body">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>ID exemplaire</th>
-                    <th>Titre</th>
-                    <th>Date d'emprunt</th>
-                    <th>Date de retour</th>
-                    <th>Rendu</th>
-                    <th></th>
-                </tr>
-            </thead>
+    <div class="card mt-3">
+        <div class="card-header bg-dark text-white display-6">Mes emprunts</div>
+        <div class="card-body">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>ID exemplaire</th>
+                        <th>Titre</th>
+                        <th>Date d'emprunt</th>
+                        <th>Date de retour</th>
+                        <th>Rendu</th>
+                        <th></th>
+                    </tr>
+                </thead>
 
-            <tbody>
-                <tr *ngFor="let emp of list()">
-                    <td>{{emp.idExemplaire}}</td>
-                    <td>{{emp.titreLivre}}</td>
-                    <td>{{emp.debut}}</td>
-                    <td>{{emp.fin}}</td>
-                    <td>{{emp.rendu}}</td>
-                </tr>
-            </tbody>
+                <tbody>
+                    <tr *ngFor="let emp of list()">
+                        <td>{{emp.idExemplaire}}</td>
+                        <td>{{emp.titreLivre}}</td>
+                        <td>{{emp.debut}}</td>
+                        <td>{{emp.fin}}</td>
+                        <td>{{emp.rendu}}</td>
+                    </tr>
+                </tbody>
 
-        </table>
+            </table>
+        </div>
+    </div>
 </div>
