correction rendre livre +bibli

--- a/bibliotheque-front/src/app/page-bibliothecaire/page-bibliothecaire.component.html
+++ b/bibliotheque-front/src/app/page-bibliothecaire/page-bibliothecaire.component.html
@@ -190,10 +190,10 @@
 
     <hr>
 
-    <div><app-ajoutlivre></app-ajoutlivre></div>
+    <!--<div><app-ajoutlivre></app-ajoutlivre></div>-->
     <hr>
     <div><app-bibliothecaire-emprunts></app-bibliothecaire-emprunts></div>
     <hr>
-    <div><app-ajout-emprunt></app-ajout-emprunt></div>
+    <!--<div><app-ajout-emprunt></app-ajout-emprunt></div>-->
 
 </div>
