--- a/bibliotheque-front/src/app/page-bibliothecaire/bibliothecaire-emprunts/bibliothecaire-emprunts.component.html
+++ b/bibliotheque-front/src/app/page-bibliothecaire/bibliothecaire-emprunts/bibliothecaire-emprunts.component.html
@@ -30,7 +30,7 @@ Recherche : <input type="text" [(ngModel)]="recherche" /><br />
                     <td>{{eDetail.finEmprunt}}</td>
                     <td>{{eDetail.rendu}}</td>
 
-                    <td><a class="btn btn-primary" *ngIf="eDetail.rendu==false" (click)="Rendrelivre(eDetail.id)"><i
+                    <td><a class="btn btn-secondary"  (click)="Rendrelivre(eDetail.id)"><i
                                 class="bi bi-pencil-square"></i></a></td>
                 </tr>
             </tbody>
