Page login : responsive

--- a/bibliotheque-front/src/app/page-connexion/page-connexion.component.html
+++ b/bibliotheque-front/src/app/page-connexion/page-connexion.component.html
@@ -4,8 +4,8 @@
         <div class="col-lg-8 mx-auto">
             <p class="lead mb-4">Plus de 2 livres sont à portée de clic. Rejoignez-nous maintenant !</p>
             <div class="text-start d-grid gap-5 d-md-flex justify-content-sm-center mb-5">
-                <div class="w-50"><app-inscription></app-inscription></div>
-                <div class="w-50"><app-connexion></app-connexion></div>
+                <div class="col-md-6"><app-inscription></app-inscription></div>
+                <div class="col-md-6"><app-connexion></app-connexion></div>
             </div>
         </div>
     </div>
