Page bibliothecaire revamped

--- a/bibliotheque-front/src/app/page-bibliothecaire/ajout-emprunt/ajout-emprunt.component.html
+++ b/bibliotheque-front/src/app/page-bibliothecaire/ajout-emprunt/ajout-emprunt.component.html
@@ -1,43 +1,30 @@
-<div class="container card h-100">
+<div class="container card">
     <fieldset class="card-body">
-    <h5 class="text-center">Ajouter emprunt</h5>
+        <h5 class="text-center">Ajouter emprunt</h5>
+        <hr>
 
-   <hr>
-
-       <div class="row mb-3">
-           <div>
-               <p class="row mb-1">ID abonné</p>
-           </div>
-           <div class="row">
-               <input type="number" id="idEmprunteur" placeholder="" [(ngModel)]="formEmprunt.idEmprunteur"/>
-           </div>
-       </div>
-
-       <div class="row mb-3">
-           <div>
-               <p class="row mb-1">ID exemplaire</p>
-           </div>
-           <div class="row">
-               <input type="number" id="idExemplaire" placeholder="" [(ngModel)]="formEmprunt.idExemplaire"/>
-           </div>
-       </div>
-
-       <div class="row mb-3">
-        <div>
-            <p class="row mb-1">Date d'emprunt</p>
+        <div class="row mb-3">
+            <!-- TODO : Selection parmi les emprunteurs possibles -->
+            <label class="form-label"  for="idEmprunteur">ID abonné</label>
+            <input class="form-control" id="idEmprunteur" type="number" [(ngModel)]="formEmprunt.idEmprunteur" />
         </div>
+
+        <div class="row mb-3">
+            <label class="form-label"  for="idExemplaire">ID exemplaire</label>
+            <input class="form-control" id="idExemplaire" type="number" [(ngModel)]="formEmprunt.idExemplaire" />
+        </div>
+
+        <div class="row mb-3">
+            <label class="form-label"  for="debut">Date d'emprunt</label>
+            <input class="form-control" id="debut" type="date" [(ngModel)]="formEmprunt.debut" />
+        </div>
+
         <div class="row">
-            <input type="date" id="debut" placeholder="" [(ngModel)]="formEmprunt.debut"/>
+            <div class="col text-center">
+                <button class="btn btn-danger btn-md me-3" type="submit" (click)="cancel_emprunt()">Reset</button>
+                <button class="btn btn-success btn-md" type="submit" (click)="save_emprunt()">Submit</button>
+            </div>
         </div>
-    </div>
 
-
-       <div class="row mb-1">  
-           <div class=" col-9 position-absolute bottom-0 end-0">
-               <button type="submit" (click)="cancel_emprunt()" class="btn btn-danger btn-md me-2 mb-3" type="submit" value="Submit">Reset</button>
-               <button type="submit" (click)="save_emprunt()" class="btn btn-success btn-md mb-3" type="submit" value="Submit">Submit</button>
-           </div>  
-       </div> 
-           
-   </fieldset>
+    </fieldset>
 </div>
