--- a/bibliotheque-front/src/app/page-bibliothecaire/bibliothecaire-emprunts/bibliothecaire-emprunts.component.html
+++ b/bibliotheque-front/src/app/page-bibliothecaire/bibliothecaire-emprunts/bibliothecaire-emprunts.component.html
@@ -1,7 +1,10 @@
-Recherche : <input type="text" [(ngModel)]="recherche" /><br />
+<div class="input-group flex-nowrap">
+    <span class="input-group-text" id="addon-wrapping"><i class="bi bi-search"></i></span>
+    <input class="form-control" type="text" [(ngModel)]="recherche" placeholder="Nom/Prénom de l'emprunteur, ou livre emprunté" aria-label="Username" aria-describedby="addon-wrapping">
+</div>
 
 <div class="card mt-3">
-    <div class="card-header bg-dark text-white display-6">Details des emprunts</div>
+    <h1 class="card-header bg-dark text-white h3">Details des emprunts</h1>
     <div class="card-body">
         <table class="table table-striped">
             <thead>
