--- a/bibliotheque-front/src/app/page-acces/page-acces.component.html
+++ b/bibliotheque-front/src/app/page-acces/page-acces.component.html
@@ -4,32 +4,35 @@
 
 <hr>
 
-<div class="mt-4 mb-5 text-center">
+<div class="mt-4 mb-4 text-center">
     <h3>Contacts</h3>
 </div>
 
 <div class="content  text-center">
     <div class="row">
 
+            <div class="col-4">
+
+                <div class="titre"> 
+                    <h5>Telephone</h5>
+                
+                    <div class="informations">  
+                        <div>
+                            <p>01 44 41 44 06</p> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         <div class="col-4">
 
             <div class="titre"> 
-                <h5>Telephone</h5>
-            </div>
-            <div class="informations">  
-            <div>
-                <p>01 44 41 44 06</p> 
-            </div>
-        </div>
+                <h5>E-mail</h5>
             
-        <div class="col-4">
-
-            <div class="titre"> 
-                <h5>Email</h5>
-            </div>
-            <div class="informations">  
-                <div>
-                    <p>bibliothèque@ajc.fr</p> 
+                <div class="informations">  
+                    <div>
+                        <p>BibliothèqueG4@ajc.fr</p> 
+                    </div>
                 </div>
             </div>
         </div>
@@ -38,20 +41,21 @@
 
             <div class="titre"> 
                 <h5>Réseaux sociaux</h5>
-            </div>
-            <div class="informations">  
-                <div>
-                    <p>Facebook</p> 
+            
+                <div class="informations">  
+                    <div>
+                        <p>Facebook : Bibliothèque AJC</p> 
+                    </div>
                 </div>
             </div>
-
         </div>
+
     </div>
 </div>
 
 <hr>
 
-<div class="mt-4 mb-5 text-center">
+<div class="mt-4 mb-4 text-center">
     <h3>Horaires d'ouverture</h3>
 </div>
 
@@ -59,54 +63,52 @@
     
 <div class="content  text-center">
     <div class="row">
-        <div class="mb-5  col-1">
+        <div class="mb-5  col-2">
             <h5> Lundi </h5>
             <div class="schedule">  
-                <div> 08:00 20:00 </div>
+                <div> 08:00 - 20:00 </div>
             </div>
         </div>
 
-        <div class="col-1 ">
+        <div class="col-2 ">
             <h5> Mardi </h5>
             <div class="schedule">  
-                <div> 08:00 20:00 </div>
+                <div> 08:00 - 20:00 </div>
             </div>
         </div>
 
-        <div class="col-1 ">
+        <div class="col-2 ">
             <h5> Mercredi </h5>
             <div class="schedule">  
-                <div> 08:00 20:00 </div>
+                <div> 08:00 - 20:00 </div>
             </div>
         </div>
 
-        <div class="col-1 ">
+        <div class="col-2 ">
             <h5> Jeudi </h5>
             <div class="schedule">  
-                <div> 08:00 20:00 </div>
+                <div> 08:00 - 20:00 </div>
             </div>
         </div>
 
-        <div class="col-1 ">
+        <div class="col-2 ">
             <h5> Vendredi </h5>
             <div class="schedule">  
-                <div> 08:00 20:00 </div>
+                <div> 08:00 - 20:00 </div>
             </div>
         </div>
 
-        <div class="col-1 ">
+        <div class="col-2 ">
             <h5> Samedi </h5>
             <div class="schedule">  
-                <div> 08:00 20:00 </div>
+                <div> 08:00 - 20:00 </div>
             </div>
         </div>
 
-        <div class="col-1 ">
-            <h5> Dimanche </h5>
-            <div class="schedule">  
-                <div> Fermé </div>
-            </div>
+        <div class="">
+            <p> Bibliothèque fermée le dimanche et les jours fériés (voir calendrier complet). </p>
         </div>
+
 </div>
 
 <hr>
@@ -117,67 +119,59 @@
 
 <div class="content text-start ms-5">
     <div class="row">
-        <div class="col-5">
+        <div class="col-6">
             
             <div class="titre"> 
-                <h5>Adresse</h5>
+                <h5>Adresse</h5> 
             </div>
-            <div class="informations">  
-                <div>
-                    <p>23 Quai de Conti, 75006 Paris</p> 
-                </div>
+            <div>
+                <p>23 Quai de Conti, 75006 Paris</p> 
             </div>
-
+            
             <br>
             
             <div class="titre"> 
                 <h5>Venir à la biblithèque</h5>
             </div>
-            <div class="informations">  
-                <div>
-                    
-                    <p>Il est très facile de venir</p> 
-                </div>
+            <div>    
+                <p>La Bibliothèque G4 est accessible par tous les modes de transport. Il est très simple d'y accéder quel que soit le moyen de transport choisi.</p> 
+            </div>
+            
+
+            <div class="titre"> 
+                <strong>Venir en transports en commun</strong>
+            </div>
+            <div>
+                <ul>
+                    <li>Métro : ligne 13 (station Livre)</li>
+                    <li>RER : ligne B (station Bibliothèque), ligne D (station Librairie)</li>
+                    <li>Tramway : ligne 8 (station Bouquins)</li>
+                </ul> 
             </div>
 
             <div class="titre"> 
-                <h5>Venir en transports en commun</h5>
+                <strong>Venir en voiture</strong>
             </div>
-            <div class="informations">  
-                <div>
-                    
-                    <p>Depuis, prendre ligne...</p> 
-                </div>
-            </div>
-
-            <div class="titre"> 
-                <h5>Venir en vélo</h5>
-            </div>
-            <div class="informations">  
-                <div>
-                    
-                    <p>Depuis le centre-ville, 10 minutes...</p> 
-                </div>
+            <div>
+                <ul>
+                    <li>Accès routiers : Autoroute A1 (sortie 2) et A86(sortie 9)</li>
+                    <li>Parkings : Parking P1 au nord, Parking P3 à l'ouest</li>
+                </ul> 
             </div>
 
             <div class="titre"> 
-                <h5>Venir en voiture</h5>
+                <strong>Venir en 2 roues</strong>
             </div>
-            <div class="informations">  
-                <div>
-                    
-                    <p>Parking à 5 minutes</p> 
-                </div>
+            <div>
+                <p>Les vélos et trotinettes en libre service viennent jusqu'à la bibliothèque!</p> 
             </div>
-
 
         </div>
 
-        <div class="col-7">
+        <div class="col-6">
             <div class="d-flex flex-fill align-items-center justify-content-center h-100">
-                <div class="mb-5">
-                    <img src="assets/img/admin.jpg" alt="you have no power here meme">
-                </div>
+                <div id="map-container-google-2" class="z-depth-1-half map-container" style="height: 500px">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d64758.822217390654!2d2.3404534640242205!3d48.86905572385345!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1ca49b72a214e263!2sBiblioth%C3%A8que%20Mazarine!5e0!3m2!1sfr!2sfr!4v1674057674338!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                </div>
             </div>
         </div>
 
