--- a/bibliotheque-front/src/app/page-connexion/inscription/inscription.component.html
+++ b/bibliotheque-front/src/app/page-connexion/inscription/inscription.component.html
@@ -22,30 +22,6 @@
             </div>
         </div>
 
-        <div class="row mb-3">
-            <div class="col-12 justify-content-center">
-                <p class="mb-1">Type de compte :</p>
-                <!-- radioButton1 : Bibliothécaire -->
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="bibliothecaire" value="bibliothecaire"
-                        [(ngModel)]="formCompte.type" />
-                    <label class="form-check-label" for="bibliothecaire">Bibliothecaire</label>
-                </div>
-                <!-- radioButton2:  -->
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="lecteur" value="inscrit"
-                        [(ngModel)]="formCompte.type" />
-                    <label class="form-check-label" for="lecteur">Lecteur</label>
-                </div>
-                <!-- radioButton3 :  -->
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="admin" value="admin"
-                        [(ngModel)]="formCompte.type" />
-                    <label class="form-check-label" for="admin">Admin</label>
-                </div>
-            </div>
-        </div>
-
         <hr>
 
         <div class="row mb-3">
@@ -62,7 +38,7 @@
 
         <div class="row mb-3">
             <div>
-                <button class="w-100 btn btn-lg btn-success" type="submit" (click)="create()">Création d'un
+                <button class="w-100 btn btn-lg btn-success" type="submit" (click)="inscriptionLecteur()">Création d'un
                     compte</button>
             </div>
         </div>
