--- a/bibliotheque-front/src/app/home/carte-collection/carte-collection.component.html
+++ b/bibliotheque-front/src/app/home/carte-collection/carte-collection.component.html
@@ -1,24 +1,9 @@
-<!-- <div class="card shadow-sm">
-    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
-      aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-      <title>Placeholder</title>
-      <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-        dy=".3em">Thumbnail</text>
-    </svg>
-    <div class="card-body">
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-        additional content. This content is a little bit longer.</p>
-      <div class="d-flex justify-content-between align-items-center">
-        <small class="text-muted">9 mins</small>
-      </div>
-    </div>
-  </div> -->
-
 <div class="card shadow-sm" style="height: 250px;">
-  <div class="card-body card-image" style="background-image: linear-gradient(0deg, #00000088 30%, #ffffff44 100%), url(../../../assets/img/news/1.png);">
+  <div class="card-body card-image" [routerLink]="[lien]"
+  [queryParams]="lienQueryParams" [style]="'background-image: linear-gradient(0deg, #00000088 30%, #ffffff44 100%), url('+ urlImg +');'">
     <div class="row h-50"></div>
     <div class="row h-50 text-center text-light">
-      <h3 class="text-sans"><b>Un auteur : la pertinence de la collec</b></h3>
+      <h3 class="text-sans"><b>{{titre}}</b></h3>
     </div>
   </div>
 </div>
